--- a/Source/Source.vcxproj.filters
+++ b/Source/Source.vcxproj.filters
@@ -8,6 +8,9 @@
     <ClCompile Include="Misc\Misc.cpp">
       <Filter>Misc</Filter>
     </ClCompile>
+    <ClCompile Include="Misc\ArgParser.cpp">
+      <Filter>Misc</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
@@ -18,6 +21,9 @@
       <Filter>Memory</Filter>
     </ClInclude>
     <ClInclude Include="Misc\Misc.h">
+      <Filter>Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Misc\ArgParser.h">
       <Filter>Misc</Filter>
     </ClInclude>
   </ItemGroup>
