--- a/Source/CSO_Chinese_Localization.vcxproj
+++ b/Source/CSO_Chinese_Localization.vcxproj
@@ -13,15 +13,15 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Memory\mem.cpp" />
-    <ClCompile Include="Misc\ArgParser.cpp" />
-    <ClCompile Include="Misc\Misc.cpp" />
+    <ClCompile Include="Miscs\ArgParser.cpp" />
+    <ClCompile Include="Miscs\Miscs.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
     <ClInclude Include="Memory\mem.h" />
     <ClInclude Include="Memory\module.h" />
-    <ClInclude Include="Misc\ArgParser.h" />
-    <ClInclude Include="Misc\Misc.h" />
+    <ClInclude Include="Miscs\ArgParser.h" />
+    <ClInclude Include="Miscs\Miscs.h" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="Memory Scan\clrcompression.dll">
